[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tazama-data-utils"
version = "0.0.1"
dependencies = [
]
requires-python = ">= 3.12"
authors = [
  {name = "Justus Ortlepp", email = "justus@tazama.org"},
]
maintainers = [
  {name = "Justus Ortlepp", email = "justus@tazama.org"}
]
description = "Data utilities in support of a Tazama implementation"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["Tazama", "Jupyter", "utilities"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.org/classifiers/
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
    'Private :: Do Not Upload',
]

[project.urls]
Homepage = "https://tazama.org"
Documentation = "https://github.com/tazama-lf/tazama-data-utils/blob/main/README.md"
Repository = "https://github.com/tazama-lf/tazama-data-utils.git"
Issues = "https://github.com/tazama-lf/tazama-data-utils/issues"
Changelog = "https://github.com/tazama-lf/tazama-data-utils/blob/main/CHANGELOG.md"

